scrapbook: fix long postit title not truncated

--- a/src/scrapbook/postit-frame.css
+++ b/src/scrapbook/postit-frame.css
@@ -4,7 +4,6 @@ html {
   padding: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
 
 body {
@@ -23,6 +22,15 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
+
+  /**
+   * This doesn't work in Firefox < 53 due to a bug:
+   * https://bugzilla.mozilla.org/show_bug.cgi?id=504622
+   *
+   * As a workaround, let it overflow and show a scroll at <html> when the
+   * title is too long.
+   */
+  min-width: unset;
 }
 
 #toolbar {
